# agents-playground

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
iam_rbac_reviewer/: __init__.py  agent.py  analyzer.py  cli.py  config.py  models.py  reporters.py  tools.py
specs/001-iam-rbac-reviewer/: plan.md  spec.md  tasks.md
tests/: conftest.py  test_agent.py  test_analyzer.py  test_cli.py  test_config.py  test_models.py  test_reporters.py  test_tools.py
tests/fixtures/: clean_policy.json  risky_policy.json
