[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "iam-rbac-reviewer"
version = "0.1.0"
description = "An Azure AI Foundry agent that reviews IAM / RBAC policies and surfaces security findings with actionable recommendations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["azure", "iam", "rbac", "security", "ai-agent", "foundry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]

dependencies = [
    "azure-ai-projects>=1.0.0b10",
    "azure-identity>=1.19.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "pip-audit>=2.7.0",
]

[project.scripts]
iam-rbac-reviewer = "iam_rbac_reviewer.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["iam_rbac_reviewer*"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM", "RUF"]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=iam_rbac_reviewer --cov-report=term-missing -v"

[tool.coverage.run]
source = ["iam_rbac_reviewer"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
